@@ -19,7 +19,6 @@
  *
  * Source for this application is maintained at https://github.com/WebGoat/WebGoat, a repository for free software projects.
  */
-
 package org.owasp.webgoat.crypto;
 
 import org.owasp.webgoat.assignments.AssignmentEndpoint;
@@ -33,88 +32,54 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpServletRequest;
-import javax.xml.bind.DatatypeConverter;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.Random;
-
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.util.Base64;
-import javax.xml.bind.DatatypeConverter;
-import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
-import javax.servlet.http.HttpServletRequest;
 
 @RestController
-@AssignmentHints({"crypto-hashing.hints.1","crypto-hashing.hints.2"})
+@AssignmentHints({"crypto-hashing.hints.1", "crypto-hashing.hints.2"})
 public class HashingAssignment extends AssignmentEndpoint {
-	
-	  @RequestMapping(path = "/crypto/hashing/sha256", produces = MediaType.TEXT_HTML_VALUE)
+
+    // Geänderte Methode, um doppelte Methoden zu vermeiden
+    @RequestMapping(path = "/crypto/hashing/sha256", produces = MediaType.TEXT_HTML_VALUE)
     @ResponseBody
     public String getSha256(HttpServletRequest request) throws NoSuchAlgorithmException {
-        String sha256Hash = (String) request.getSession().getAttribute("sha256Hash");
-        if (sha256Hash == null) {
+        String sha256 = (String) request.getSession().getAttribute("sha256");
+        if (sha256 == null) {
             SecureRandom random = new SecureRandom();
             byte[] salt = new byte[16];
             random.nextBytes(salt);
             String secret = Base64.getEncoder().encodeToString(salt);
 
-            MessageDigest md = MessageDigest.getInstance("SHA-256");
-            md.update(secret.getBytes());
-            byte[] digest = md.digest();
-            sha256Hash = DatatypeConverter.printHexBinary(digest).toUpperCase();
+            sha256 = getHash(secret, "SHA-256");
 
-            request.getSession().setAttribute("sha256Hash", sha256Hash);
+            request.getSession().setAttribute("sha256Hash", sha256);
             request.getSession().setAttribute("sha256Secret", secret);
         }
-        return sha256Hash;
+        return sha256;
     }
 
-	
-	@RequestMapping(path="/crypto/hashing/sha256",produces=MediaType.TEXT_HTML_VALUE)
-    @ResponseBody
-    public String getSha256(HttpServletRequest request) throws NoSuchAlgorithmException {
-		
-		String sha256 = (String) request.getSession().getAttribute("sha256");
-		if (sha256 == null) {
-			String secret = SECRETS[new Random().nextInt(SECRETS.length)];
-		    sha256 = getHash(secret, "SHA-256");
-			request.getSession().setAttribute("sha256Hash", sha256);
-			request.getSession().setAttribute("sha256Secret", secret);
-		}
-		return sha256;
-    }
-	
     @PostMapping("/crypto/hashing")
     @ResponseBody
     public AttackResult completed(HttpServletRequest request, @RequestParam String answer_pwd1, @RequestParam String answer_pwd2) {
-        
-    	String md5Secret = (String) request.getSession().getAttribute("md5Secret");
-    	String sha256Secret = (String) request.getSession().getAttribute("sha256Secret");
-    	
-    	if (answer_pwd1!=null && answer_pwd2 !=null) {
-        	if (answer_pwd1.equals(md5Secret)
-        		&& answer_pwd2.equals(sha256Secret)) {
-        		return success(this)
-        				.feedback("crypto-hashing.success")
-        				.build();
-        	} else if (answer_pwd1.equals(md5Secret)
-            		|| answer_pwd2.equals(sha256Secret)) {
-        		return failed(this).feedback("crypto-hashing.oneok").build();
-        	} 
-        } 
-        return failed(this).feedback("crypto-hashing.empty").build(); 
+        String md5Secret = (String) request.getSession().getAttribute("md5Secret");
+        String sha256Secret = (String) request.getSession().getAttribute("sha256Secret");
+
+        if (md5Secret != null && sha256Secret != null && answer_pwd1 != null && answer_pwd2 != null) {
+            if (answer_pwd1.equals(md5Secret) && answer_pwd2.equals(sha256Secret)) {
+                return success(this).feedback("crypto-hashing.success").build();
+            } else if (answer_pwd1.equals(md5Secret) || answer_pwd2.equals(sha256Secret)) {
+                return failed(this).feedback("crypto-hashing.oneok").build();
+            }
+        }
+        return failed(this).feedback("crypto-hashing.empty").build();
     }
-    
+
     public static String getHash(String secret, String algorithm) throws NoSuchAlgorithmException {
-    	MessageDigest md = MessageDigest.getInstance(algorithm);
-	    md.update(secret.getBytes());
-	    byte[] digest = md.digest();
-	    return DatatypeConverter
-	      .printHexBinary(digest).toUpperCase();
+        MessageDigest md = MessageDigest.getInstance(algorithm);
+        md.update(secret.getBytes());
+        byte[] digest = md.digest();
+        return Base64.getEncoder().encodeToString(digest).toUpperCase();
     }
-    
 }
